# opentrustseal

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  index.html  otslogo.psd
crawler/: fetch_service.py  ots-crawler.service  ott-crawler.service
dataset/: PUBLICATION-DRAFT.md  README.md
deploy/: cpanel-upload.py  deploy.sh  historical_whois.env.template  scraper.env.template  setup-vps.sh
docs/: ARCHITECTURE.md  KEY-ROTATION.md  LITESTREAM-RUNBOOK.md  MAC-PATCH-RESOURCE-BLOCKING.md  MERCHANT-OUTREACH-EMAIL.md  PHASE-2-COMPLETION-RUNBOOK.md  SCORING-AND-KYC.md  SEED-SYSTEMD-RUNBOOK.md  THREAT-MODEL.md  TIER-6-ACTIVATION.md  TIER-6-COMMERCIAL-SCRAPER-SPEC.md  TRANSPARENCY-LOG.md  V1.4-RESCORE-RUNBOOK.md  VULTR-TICKET-REPLY-GGG-19UBL.md  WINDOWS-CRAWLER-DEPLOY.md
examples/: README.md  async_batch.py  basic_check.py  langchain_agent.py  multi_merchant.py
public/: dashboard.html  index.html  register.html
public/docs/: methodology.html
public/examples/: index.html
public/marketing/: index.html
sdk/crewai-pr/: PR-DESCRIPTION.md  opentrustseal_tool.py
sdk/python/: README.md  pyproject.toml
sdk/python/opentrustseal/: __init__.py  client.py  models.py
sdk/python/opentrustseal/integrations/: crewai.py  langchain.py
sdk/python/opentrusttoken/: __init__.py  client.py  models.py
sdk/python/opentrusttoken/integrations/: crewai.py  langchain.py
sdk/typescript/: package.json
server/: crawl.py  crawl_seed.py  crawl_spectrum.py  export_dataset.py  merge_db.py  requirements.txt  rescore.py
server/app/: checklist.py  (+13 more)
spec/: PROTOCOL.md  SCORING-V1.4.md
(+27 files in other folders)
