[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentrustseal"
version = "0.1.0"
description = "Trust verification for AI agent commerce"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "OpenTrustSeal, Inc.", email = "alu@opentrustseal.com"}]
keywords = ["ai", "agents", "trust", "verification", "payments", "commerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
async = ["httpx[http2]>=0.24.0"]

[project.urls]
Homepage = "https://opentrustseal.com"
Documentation = "https://api.opentrustseal.com/docs"
Repository = "https://github.com/OpenTrustSeal/opentrustseal"
